# template_Nikhef_server_CLI

./: README.md  generate_server_cli.py  pyproject.toml
.github/workflows/: docs.yml
doc/: README.md
doc/sphinx/: Makefile
doc/sphinx/source/: conf.py  index.rst
doc/sphinx/source/server/: index.rst  tutorial.rst
my_server/: _logging.py  server_utils.py
my_server/scripts/: example_get.py  example_ls.py  example_manage_project.py  example_mkdir.py  example_mv.py  example_restore.py  example_rm.py  example_server.py  example_upload.py
